# TvOverlay_cpu

./: README.md
SystemOverlay/: .gitignore  ANDROID_TV_FIXES.md  CODE_REVIEW_REPORT.md  CRITICAL_FIXES_REPORT.md  DEPLOYMENT_GUIDE.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_RELEASE_v1.4.md  OPTIMIZATION_SUMMARY.md  README.md  RELEASE_v1.5.0.md  RELEASE_v1.5.1_FINAL.md  RELEASE_v1.5.2_PROFESSIONAL.md  RELEASE_v1.5.3_COMPACT.md  gradlew  gradlew.bat  local.properties.template  settings.gradle.kts
SystemOverlay/app/: build.gradle.kts  proguard-rules.pro
SystemOverlay/app/src/main/: AndroidManifest.xml
SystemOverlay/app/src/main/cpp/: CMakeLists.txt  native_proc_reader.cpp
SystemOverlay/app/src/main/java/com/systemoverlay/app/: SystemOverlayApp.kt
SystemOverlay/app/src/main/java/com/systemoverlay/app/core/: Constants.kt  DeviceUtils.kt  Extensions.kt  Logger.kt  PermissionHelper.kt  Result.kt
SystemOverlay/app/src/main/java/com/systemoverlay/app/data/repository/: SettingsRepositoryImpl.kt  SystemMetricsRepositoryImpl.kt
SystemOverlay/app/src/main/java/com/systemoverlay/app/di/: AppModule.kt
SystemOverlay/app/src/main/java/com/systemoverlay/app/receiver/: BootReceiver.kt
SystemOverlay/app/src/main/java/com/systemoverlay/app/service/: OverlayService.kt
SystemOverlay/app/src/main/res/drawable/: ic_cpu.xml  ic_gpu.xml  ic_notification.xml  ic_ram.xml  tv_banner.xml
SystemOverlay/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
SystemOverlay/gradle/: libs.versions.toml
(+22 files in other folders)
